--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = example-pkg-0Exe
+name = pycolor
 version = 0.0.1
-author = Example Author
+author = 0Exe
 author_email = zeroexe3000@gmail.com
 description = Color Markup In Python!
 long_description = file: README.md
